Solo Archivos dll

--- a/BattleRoyale.vcxproj.filters
+++ b/BattleRoyale.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClCompile Include="GameTile.cpp">
       <Filter>Archivos de origen</Filter>
     </ClCompile>
+    <ClCompile Include="Frames.cpp">
+      <Filter>Archivos de origen</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="MainMenu.h">
@@ -93,6 +96,9 @@
       <Filter>Archivos de encabezado</Filter>
     </ClInclude>
     <ClInclude Include="Class\Atributos.h">
+      <Filter>Archivos de encabezado</Filter>
+    </ClInclude>
+    <ClInclude Include="Frames.h">
       <Filter>Archivos de encabezado</Filter>
     </ClInclude>
   </ItemGroup>
