--- a/BattleRoyale.vcxproj
+++ b/BattleRoyale.vcxproj
@@ -136,6 +136,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Builder.cpp" />
+    <ClCompile Include="Frames.cpp" />
     <ClCompile Include="GameTile.cpp" />
     <ClCompile Include="GameWorld.cpp" />
     <ClCompile Include="main.cpp" />
@@ -159,6 +160,7 @@
     <ClInclude Include="Class\Personaje.h" />
     <ClInclude Include="Class\Punto.h" />
     <ClInclude Include="Class\Salud.h" />
+    <ClInclude Include="Frames.h" />
     <ClInclude Include="GameTile.h" />
     <ClInclude Include="GameWorld.h" />
     <ClInclude Include="MainMenu.h" />
