--- a/BattleRoyale.vcxproj
+++ b/BattleRoyale.vcxproj
@@ -136,17 +136,19 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Builder.cpp" />
+    <ClCompile Include="Buttom.cpp" />
+    <ClCompile Include="FillFrame.cpp" />
+    <ClCompile Include="Frames.cpp" />
     <ClCompile Include="GameTile.cpp" />
     <ClCompile Include="GameWorld.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="MainMenu.cpp" />
     <ClCompile Include="OptionsMenu.cpp" />
+    <ClCompile Include="test.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Builder.h" />
-<<<<<<< HEAD
-    <ClInclude Include="Frames.h" />
-=======
+    <ClInclude Include="Buttom.h" />
     <ClInclude Include="Class\Animal.h" />
     <ClInclude Include="Class\Archer.h" />
     <ClInclude Include="Class\Atributos.h" />
@@ -161,7 +163,8 @@
     <ClInclude Include="Class\Personaje.h" />
     <ClInclude Include="Class\Punto.h" />
     <ClInclude Include="Class\Salud.h" />
->>>>>>> parent of e0e5332 (Solo Archivos dll)
+    <ClInclude Include="FillFrame.h" />
+    <ClInclude Include="Frames.h" />
     <ClInclude Include="GameTile.h" />
     <ClInclude Include="GameWorld.h" />
     <ClInclude Include="MainMenu.h" />
